Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27597

Editable ComboBox does not show the correct item when user defined model is set.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.3.2
    • 4.7.4, 4.8.2, 5.0.0
    • Widgets: Itemviews
    • None
    • Windows Linux OSX
    • 3fd184b663efcf3691efcd6411fb0b18f941f7b2 (branch 5.3, 19.6.2014, 5.3.2)

    Description

      When a user defined model is set on an editable QComboBox and view is set to a QTreeView, selecting a child of the tree view does not display it. Instead, an unexpected item gets displayed in the combo edit box.

      Attached example demonstrates this.

      Attachments

        For Gerrit Dashboard: QTBUG-27597
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes